# word_cloud

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  main.py  models.py  pyproject.toml  requirements.txt  run.sh  test_api.py  utils.py  visualize.py
app/: orchestrator.py
app/core/: concept_merge.py  frequency.py  latin_router.py  logging.py  nltk_data.py  roman_normalize.py  segmentation.py
app/data/: concept_aliases.json
app/processors/: __init__.py  base.py  english.py  roman_urdu.py  urdu.py
english/: a.py  main.py  models.py  utils.py
tests/: test_concept_merge.py  test_latin_router.py  test_orchestrator.py  test_processors.py  test_roman_normalize.py
