[project]
name = "world-cloud-formedia"
version = "0.1.0"
description = "Roman Urdu word frequency API for media text analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.136.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "uvicorn>=0.49.0",
    "wordcloud>=1.9.6",
]
