[project]
name = "world-cloud-formedia"
version = "0.2.0"
description = "Multilingual word frequency API for Urdu, Roman Urdu, and English media text"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.136.3",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "stanza>=1.12.2",
    "uvicorn>=0.49.0",
    "wordcloud>=1.9.6",
]
